# RGBD-PixelTo3D

./: .gitignore  CMakeLists.txt  README.md  pose.py  pyproject.toml  redis-pose.py  requirements.txt  setup.py
include/: AuxImageType.hpp  RGBD-PixelTo3D.hpp  RGBD-Pose.hpp  SocketAux.hpp
src/main/: RGBD-PixelTo3D.cpp  RGBD-Pose.cpp  SocketAux.cpp
src/test/: CMakeLists.txt  ConvertTo3DTest.cpp  PoseTest.cpp  TestsMatches.hpp
wrappers/: CMakeLists.txt
wrappers/PyRGBDPixelTo3D/: .gitignore  CMakeLists.txt  CameraIntrinsics.cpp  PixelTo3D.cpp  Pose.cpp  PoseCoords.cpp  PoseInfo.cpp  Python.cpp  Python.hpp
